[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["David Ibia <developer@boxpositron.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
