[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["David Ibia <developer@boxpositron.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pyaudio = "^0.2.14"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
sounddevice = "^0.5.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pycodestyle = "^2.12.1"
types-pyaudio = "^0.2.16.20240516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
